--- a/css/index_style.css
+++ b/css/index_style.css
@@ -3,6 +3,7 @@
 :root{
 	--color: crimson;
 	--grad: linear-gradient(to right, #154276, #ff5353);
+	--grad-2: linear-gradient(to left, #154276, #ff5353);
 }
 *{
 	margin: 0;
@@ -36,13 +37,20 @@ main{
 	text-align: center;
 	min-height: calc(100vh - 100px);
 }
-main h2 {
+.head {
 	display: inline-block;
-	
 	padding: 0 30px 20px;
 	text-align: center;
 	color: #666;
 	border-bottom: 1px solid #666;
+}
+.head-2 {
+	display: inline-block;
+	padding: 20px 0;
+	font-size: 21px;
+	font-weight: bold;
+	text-align: center;
+	color: #333;
 }
 .action-container{
 	display: flex;
@@ -61,8 +69,9 @@ main h2 {
 	transition: box-shadow .2s, transform .2s;
 	border-radius: 5px;
 }
-.btn:hover, a:hover{
+.btn:hover, a:hover,.btn:focus, a:focus{
 	box-shadow: 0 2px 4px #232323;
+	outline: none;
 	transform: translateY(-3px);
 }
 .btn:active, a:active{
@@ -92,12 +101,13 @@ main h2 {
 	border: 1px solid #999;
 }
 input[type=file]{
-	width:100%;
+	/*width:100%;*/
 	font-family: 'Montserrat', sans-serif;
 	padding: 5px 0px;
 	font-size: 14px;
 	resize: none;
 	margin: 7px 0;
+	padding: 10px;
 }
 .btn{
 	font-size: 17px;
@@ -110,6 +120,7 @@ input[type=file]{
 	background-image: var(--grad);
 	backface-visibility:hidden;
 	margin-right: 30px;
+	backface-visibility: hidden;
 }
 .err{
 	color: red;
@@ -119,9 +130,76 @@ input[type=file]{
 	color:green;
 	text-align: center;
 	font-size: 12px;
-	padding: 20px;
 	margin: 0 0 10px;
 }
+.form-group{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.input-select{
+	width: 30%;
+	margin-right: 2rem;
+}
 
+/*******************/
 
+.list-item{
+	max-width:600px;
+	margin: 5px auto;
+	background-color: #ddd;
+	padding: 12px 16px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-top-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
 
+.list-container{
+	text-align: center;
+	background-image: var(--grad);
+	margin: 30px auto;
+	padding: 30px 0;
+	width: 100%;
+	height: 400px;
+	overflow-y: scroll;
+	position: relative;
+}
+.input-checkbox{
+	margin-left: 15px;
+	width: 20px;
+	height: 20px;
+	border: none;
+	outline: 1px solid red;
+}
+
+.back-btn{
+	position: absolute;
+	top: 30px;
+	left: 30px;
+	padding: 10px !important;
+	text-align: center;
+	font-size: 30px;
+	border-radius: 50% !important;
+}
+.back-img{
+	width: 30px;
+	height: 30px;
+}
+.modify-group{
+	margin: 20px 0;
+}
+.modify-group input {
+	margin: 7px 15px;
+}
+.body{overflow: hidden;}
+.addimg{height: 400px;flex: 0 0 40%;background-image:var(--grad-2);text-align: center;}
+.add-head{
+	font-family: 'Montserrat',sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	color: #efefef;
+	margin: 20px 0;
+	display: block;
+}
